Remove boilerplate from About

--- a/about.html
+++ b/about.html
@@ -1,18 +1,21 @@
 ---
 layout: default
-title: "The high quality, completely customizable and 100% free blog template for Jekyll"
+title: "About me - Inspirations."
 description: ""
 ---
 
 <div class="about {% if site.scrollappear_enabled %}scrollappear{% endif %}">
   <img src="{% asset 'about.jpg' @path %}" alt="About Nielsen Ramon header image" />
-  <h1>About me</h1>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </p>
+  <h1>Inspirations.</h1>
+
+  <blockquote>
+    <strong>Lines of light ranged in the nonspace of the mind.</strong> - William Gibson/Neuromancer
+  </blockquote>
+  <br>
+  <blockquote>
+    <strong>Thus information dissolves meaning and dissolves the social, in a sort of nebulous state dedicated not
+      to a surplus of innovation, but, on the contrary, to total entropy.</strong> -  Jean Baudrillard
+  </blockquote>
+
+
 </div>
