Enabling jekyll twitter plugin

--- a/about.html
+++ b/about.html
@@ -16,6 +16,9 @@ description: ""
     <strong>Thus information dissolves meaning and dissolves the social, in a sort of nebulous state dedicated not
       to a surplus of innovation, but, on the contrary, to total entropy.</strong> -  Jean Baudrillard
   </blockquote>
-
+  <br>
+  <div class='jekyll-twitter-plugin'>
+    {% twitter https://twitter.com/xirkus maxwidth=500 limit=5 %}
+  </div>
 
 </div>
