Change back to default Twitter theme

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ description: ""
   </blockquote>
   <br>
   <div class='jekyll-twitter-plugin'>
-    {% twitter https://twitter.com/xirkus maxwidth=610 theme=dark cards=hidden dnt=true limit=5 %}
+    {% twitter https://twitter.com/xirkus maxwidth=610 cards=hidden dnt=true limit=5 %}
   </div>
 
 </div>
