Update 404 page with image

--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@ layout: default
 
 <div class="notfound-wrapper">
   <div class="notfound-content">
+    <img src="https://media.giphy.com/media/4560Nv2656Gv0Lvp9F/giphy.gif" class="grid-centered"></img>
     <p>
       Looks like you got lost.
       <br>
